tests/NormalTests/paczka1/small_fuzzy/17416710.err
Error in line 10: NxQ A640 98,2
Error in line 9: Iqao6 S788 97,5
